# SlicerImpactDoseAcc

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: ci.yml
ImpactDoseAcc/: CMakeLists.txt  ImpactDoseAcc.py
ImpactDoseAcc/Resources/UI/: AccumulationWidget.ui  DVHWidget.ui  MetricsWidget.ui  PrescriptionWidget.ui
ImpactDoseAcc/widgets/: __init__.py  accumulation_widget.py  base_widget.py  dvh_widget.py  metrics_widget.py  prescription_widget.py
